# xiaomiao-os

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  partitions.csv  sdkconfig.defaults  ui-simulator.html
.github/workflows/: build.yml
docs/: APP_DEVELOPMENT.md
examples/clock.app/: main.py  manifest.json
examples/hello.app/: main.py  manifest.json
examples/snake.app/: main.py  manifest.json
main/: CMakeLists.txt  idf_component.yml  main.c  return_to_loader.h
main/app_manager/: app_manager.c  app_manager.h
main/config_manager/: config_manager.c  config_manager.h
main/lvgl_port/: lvgl_port.c  lvgl_port.h
main/micropython/: micropython_runtime.c  micropython_runtime.h
main/power_manager/: power_manager.c  power_manager.h
main/ui/: ui_main.c  ui_main.h
